# CPP_HoldDetector

./: README.md  README_but_presentation(PL).pptx
HoldDetector/: CMakeLists.txt  main.cpp
